fixed overflow from menu small vps

--- a/WPTheme/socialistalternative/main.css
+++ b/WPTheme/socialistalternative/main.css
@@ -248,6 +248,7 @@ figcaption {
   min-height: 100vh;
   box-shadow: -11px 0px 16px 0px rgba(0, 0, 0, 0.75);
   width: 370px;
+  max-width: 100%;
   display: block;
   color: rgb(249, 249, 228);
   font-weight: 700;
@@ -283,7 +284,7 @@ figcaption {
 .salt-mainmenu a {
   color: inherit;
   text-decoration: none;
-  white-space: nowrap;
+  white-space: normal;
 }
 
 .salt-navsearch {
@@ -349,6 +350,10 @@ figcaption {
     margin: 0px 70px;
     display: flex;
     justify-content: space-between;
+  }
+
+  .salt-mainmenu a {
+    white-space: nowrap;
   }
 
   .salt-mainmenu .menu-btn ~ .menu {
